--- a/k8s/apps/prometheus-exporter/servicemonitor.yaml
+++ b/k8s/apps/prometheus-exporter/servicemonitor.yaml
@@ -12,6 +12,7 @@ spec:
     honorTimestamps: true
     path: /metrics
     port: "prometheus"
+    interval: 15s
   jobLabel: otel-exporter
   namespaceSelector:
     matchNames:
