--- a/k8s/apps/exclusive-http-server/service.yaml
+++ b/k8s/apps/exclusive-http-server/service.yaml
@@ -9,6 +9,9 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
+  - name: metrics
+    port: 8081
+    targetPort: 8081
   selector:
     app: exclusive-http-server
   type: ClusterIP
