--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -97,7 +97,7 @@ spec:
         serviceMonitorSelectorNilUsesHelmValues: false
         serviceMonitorSelector:
           matchLabels:
-            app: otel-exporter
+            walnuts.dev/scraped-by: prometheus
         storageSpec:
           volumeClaimTemplate:
             spec:
