--- a/k8s/apps/prometheus-adapter/helm.yaml
+++ b/k8s/apps/prometheus-adapter/helm.yaml
@@ -20,3 +20,19 @@ spec:
       url: http://prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local
       port: 9090
       path: ""
+    rules:
+      default: true
+      custom:
+      - seriesQuery: 'gin_request_total'
+        resources:
+          overrides:
+            namespace:
+              resource: namespace
+            pod:
+              resource: pod
+            service:
+              resource: service
+        name:
+          matches: ""
+          as: "gin_request_total"
+        metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
