gin_request_totalによるhpa

--- a/k8s/apps/exclusive-http-server/hpa.yaml
+++ b/k8s/apps/exclusive-http-server/hpa.yaml
@@ -10,9 +10,10 @@ spec:
   minReplicas: 1
   maxReplicas: 10
   metrics:
-  - type: Resource
-    resource:
-      name: cpu
+  - type: Pods
+    pods:
+      metric:
+        name: gin_request_total
       target:
-        type: Utilization
-        averageUtilization: 120
+        type: AverageValue
+        averageValue: "500"
