--- a/k8s/apps/photoprism/externalsecret.yaml
+++ b/k8s/apps/photoprism/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
       engineVersion: v2
       type: Opaque
       data:
-        PHOTOPRISM_DATABASE_DSN: photoprism:{{ .dbpassword }}@tcp(mariadb.photoprism.svc.cluster.local:3306)/photoprism?charset=utf8mb4,utf8&parseTime=true
+        PHOTOPRISM_DATABASE_DSN: photoprism:{{ .dbpassword }}@tcp(moco-default-primary.databases.svc.cluster.local:3306)/photoprism?charset=utf8mb4,utf8&parseTime=true
         PHOTOPRISM_ADMIN_PASSWORD: "{{ .adminpassword }}"
   data:
   - secretKey: adminpassword
