--- a/k8s/apps/samba-backup/kustomization.yaml
+++ b/k8s/apps/samba-backup/kustomization.yaml
@@ -8,6 +8,7 @@ labels:
 resources:
 - cronjob.yaml
 - externalsecret.yaml
+- image-policy.yaml
 configMapGenerator:
 - name: samba-backup-script
   files:
