--- a/k8s/apps/samba-backup/image-policy.yaml
+++ b/k8s/apps/samba-backup/image-policy.yaml
@@ -38,6 +38,10 @@ metadata:
 spec:
   imageRepositoryRef:
     name: samba-backup
+  filterTags:
+    # pattern: "[a-f0-9]+-(?P<ts>[0-9]+)"
+    pattern: "^(?P<version>[0-9]+)\\.(?P<revision>[0-9]+)$"
+    extract: "${version}${revision}"
   policy:
-    semver:
-      range: "^12.x"
+    numerical:
+      order: asc
