--- a/k8s/apps/dashy-oauth2-proxy/helm.yaml
+++ b/k8s/apps/dashy-oauth2-proxy/helm.yaml
@@ -19,7 +19,7 @@ spec:
       existingSecret: dashy-oauth2-proxy
       configFile: |-
         email_domains = [ "*" ]
-        upstreams = [ "http://dashy.default.svc.cluster.local/" ]
+        upstreams = [ "http://dashy.default.svc.cluster.local:8080/" ]
         pass_access_token = true
         user_id_claim = "sub"
         oidc_groups_claim="my:zitadel:grants"
