--- a/k8s/apps/prometheus-adapter/helm.yaml
+++ b/k8s/apps/prometheus-adapter/helm.yaml
@@ -38,6 +38,6 @@ spec:
         metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
     resources:
       requests:
-        memory: 64Mi
+        memory: 1.5Gi
       limits:
-        memory: 128Mi
+        memory: 3Gi
