--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -37,6 +37,7 @@ spec:
           schema: v13
       limits_config:
         allow_structured_metadata: true
+        retention_period: 336h
     singleBinary:
       replicas: 1
       persistence:
