--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -60,6 +60,13 @@ spec:
         volumeClaimsEnabled: false
         dataVolumeParameters:
           emptyDir: {}
+      extraVolumeMounts:
+      - name: data-override
+        mountPath: /var/loki
+      extraVolumes:
+      - name: data-override
+        emptyDir: {}
+        defaultMode: 755
     read:
       replicas: 1
       autoscaling:
@@ -70,10 +77,13 @@ spec:
       extraEnvFrom:
       - secretRef:
           name: loki-minio
-      persistence:
-        volumeClaimsEnabled: false
-        dataVolumeParameters:
-          emptyDir: {}
+      extraVolumeMounts:
+      - name: data-override
+        mountPath: /var/loki
+      extraVolumes:
+      - name: data-override
+        emptyDir: {}
+        defaultMode: 755
     backend:
       replicas: 2
       autoscaling:
@@ -88,5 +98,12 @@ spec:
         volumeClaimsEnabled: false
         dataVolumeParameters:
           emptyDir: {}
+      extraVolumeMounts:
+      - name: data-override
+        mountPath: /var/loki
+      extraVolumes:
+      - name: data-override
+        emptyDir: {}
+        defaultMode: 755
     singleBinary:
       replicas: 0
