--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -20,16 +20,7 @@ spec:
       auth_enabled: false
       commonConfig:
         replication_factor: 1
-      storage:
-        type: s3
-        bucketNames:
-          chunks: "loki-chunks"
-          ruler: "loki-ruler"
-          admin: "loki-admin"
-        s3:
-          endpoint: "https://minio.walnuts.dev"
-          secretAccessKey: "${secretAccessKey}"
-          accessKeyId: "${accessKeyId}"
+
       server:
         # "error": "HTTP 500 \"Internal Server Error\": rpc error: code = ResourceExhausted desc = grpc: received message larger than max (4840865 vs. 4194304)"
         # https://grafana.com/docs/loki/latest/configure/
@@ -46,20 +37,16 @@ spec:
       limits_config:
         allow_structured_metadata: true
         retention_period: 336h
+
+    minio:
+      enabled: true
+
     write:
       replicas: 1
       autoscaling:
         enabled: true
         minReplicas: 1
         maxReplicas: 3
-      extraArgs: ["-config.expand-env=true"]
-      extraEnvFrom:
-      - secretRef:
-          name: loki-minio
-      persistence:
-        volumeClaimsEnabled: false
-        dataVolumeParameters:
-          emptyDir: {}
 
     read:
       replicas: 1
@@ -67,10 +54,6 @@ spec:
         enabled: true
         minReplicas: 1
         maxReplicas: 3
-      extraArgs: ["-config.expand-env=true"]
-      extraEnvFrom:
-      - secretRef:
-          name: loki-minio
 
     backend:
       replicas: 2
@@ -78,14 +61,6 @@ spec:
         enabled: true
         minReplicas: 2
         maxReplicas: 3
-      extraArgs: ["-config.expand-env=true"]
-      extraEnvFrom:
-      - secretRef:
-          name: loki-minio
-      persistence:
-        volumeClaimsEnabled: false
-        dataVolumeParameters:
-          emptyDir: {}
 
     singleBinary:
       replicas: 0
