--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -46,6 +46,8 @@ spec:
       limits_config:
         allow_structured_metadata: true
         retention_period: 336h
+      containerSecurityContext:
+        readOnlyRootFilesystem: false
     write:
       replicas: 1
       autoscaling:
