--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -48,6 +48,11 @@ spec:
         retention_period: 336h
       containerSecurityContext:
         readOnlyRootFilesystem: false
+      podSecurityContext:
+        fsGroup: 10001
+        runAsGroup: 10001
+        runAsNonRoot: false
+        runAsUser: 0
     write:
       replicas: 1
       autoscaling:
