--- a/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
@@ -30,7 +30,7 @@ spec:
           value: service.name, k8s.container.name, k8s.namespace.name, k8s.pod.name
     exporters:
       loki:
-        endpoint: http://loki.monitoring.svc.cluster.local:3100/loki/api/v1/push
+        endpoint: http://loki-write.monitoring.svc.cluster.local:3100/loki/api/v1/push
         tls:
           insecure: true
         default_labels_enabled:
