--- a/k8s/apps/loki/helm.yaml
+++ b/k8s/apps/loki/helm.yaml
@@ -58,6 +58,15 @@ spec:
         enabled: true
         minReplicas: 1
         maxReplicas: 3
+        targetCPUUtilizationPercentage: 700
+        targetMemoryUtilizationPercentage: 200
+      resources:
+        requests:
+          memory: 300Mi
+          cpu: 100m
+        limits:
+          memory: 1Gi
+          cpu: 1
       extraArgs: ["-config.expand-env=true"]
       extraEnvFrom:
       - secretRef:
@@ -73,6 +82,15 @@ spec:
         enabled: true
         minReplicas: 1
         maxReplicas: 3
+        targetCPUUtilizationPercentage: 500
+        targetMemoryUtilizationPercentage: 200
+      resources:
+        requests:
+          memory: 200Mi
+          cpu: 10m
+        limits:
+          memory: 1Gi
+          cpu: 100m
       extraArgs: ["-config.expand-env=true"]
       extraEnvFrom:
       - secretRef:
@@ -84,6 +102,15 @@ spec:
         enabled: true
         minReplicas: 2
         maxReplicas: 3
+        targetCPUUtilizationPercentage: 800
+        targetMemoryUtilizationPercentage: 200
+      resources:
+        requests:
+          memory: 256Mi
+          cpu: 10m
+        limits:
+          memory: 1Gi
+          cpu: 100m
       extraArgs: ["-config.expand-env=true"]
       extraEnvFrom:
       - secretRef:
