grafana: Skip Sign in with OAuth page

--- a/k8s/apps/prometheus-stack/helm.yaml
+++ b/k8s/apps/prometheus-stack/helm.yaml
@@ -52,6 +52,7 @@ spec:
           level: debug
         auth:
           disable_login_form: true
+          oauth_auto_login: true
         auth.basic:
           enabled: false
         auth.generic_oauth:
