--- a/k8s/apps/photoprism/mariadb/pvc.yaml
+++ b/k8s/apps/photoprism/mariadb/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: longhorn
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 8Gi
