--- a/k8s/apps/misskey/pvc.yaml
+++ b/k8s/apps/misskey/pvc.yaml
@@ -6,7 +6,7 @@ spec:
   storageClassName: longhorn
   volumeName: misskey
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 4Gi
