--- a/k8s/apps/photoprism/pvc.yaml
+++ b/k8s/apps/photoprism/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: longhorn-local
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 2Gi
@@ -17,7 +17,7 @@ metadata:
 spec:
   storageClassName: longhorn-local
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 24Gi
@@ -29,7 +29,7 @@ metadata:
 spec:
   storageClassName: longhorn
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 8Gi
