--- a/k8s/apps/longhorn/storageclass.yaml
+++ b/k8s/apps/longhorn/storageclass.yaml
@@ -7,5 +7,6 @@ allowVolumeExpansion: true
 parameters:
   numberOfReplicas: "1"
   dataLocality: "best-effort"
+  reclaimPolicy: Retain
   staleReplicaTimeout: "30"
   fromBackup: ""
