--- a/k8s/apps/photoprism/mariadb/pvc.yaml
+++ b/k8s/apps/photoprism/mariadb/pvc.yaml
@@ -4,6 +4,7 @@ metadata:
   name: photoprism-mariadb
 spec:
   storageClassName: longhorn
+  volumeName: pvc-d6df94d3-09f5-447d-8e2e-ed3767dfc32d
   accessModes:
   - ReadWriteMany
   resources:
