--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -20,7 +20,7 @@ spec:
       storageClass: longhorn
       size: 8Gi
       volumeName: minio
-      accessMode: ReadWriteMany
+      accessMode: ReadWriteOnce
     ingress:
       enabled: true
       ingressClassName: nginx
