--- a/k8s/apps/mysql-default/mysqlcluster.yaml
+++ b/k8s/apps/mysql-default/mysqlcluster.yaml
@@ -47,7 +47,7 @@ spec:
   - metadata:
       name: mysql-data
     spec:
-      accessModes: ["ReadWriteMany"]
+      accessModes: ["ReadWriteOnce"]
       storageClassName: "longhorn"
       resources:
         requests:
