--- a/k8s/apps/photoprism/mariadb/pvc.yaml
+++ b/k8s/apps/photoprism/mariadb/pvc.yaml
@@ -6,7 +6,7 @@ spec:
   storageClassName: longhorn
   volumeName: pvc-d6df94d3-09f5-447d-8e2e-ed3767dfc32d
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   resources:
     requests:
       storage: 8Gi
