--- a/k8s/apps/samba-backup/externalsecret.yaml
+++ b/k8s/apps/samba-backup/externalsecret.yaml
@@ -14,3 +14,11 @@ spec:
     remoteRef:
       key: samba-backup
       property: id_ed25519
+  - secretKey: user
+    remoteRef:
+      key: samba-backup
+      property: user
+  - secretKey: password
+    remoteRef:
+      key: samba-backup
+      property: password
