add misskey healthz

--- a/k8s/apps/misskey/deployment.yaml
+++ b/k8s/apps/misskey/deployment.yaml
@@ -55,6 +55,18 @@ spec:
             secretKeyRef:
               name: misskey-secret
               key: misskeydbpassword
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 3000
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        startupProbe:
+          httpGet:
+            path: /healthz
+            port: 3000
+          failureThreshold: 30
+          periodSeconds: 10
         resources:
           requests:
             memory: 512Mi
