--- a/k8s/apps/minio/old/kustomization.yaml
+++ b/k8s/apps/minio/old/kustomization.yaml
@@ -1,9 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: minio
 resources:
-- externalsecret.yaml
 - helm.yaml
-- ./old
 components:
-- ../../components/helm
+- ../../../components/helm
