--- a/k8s/apps/minio-old/helm.yaml
+++ b/k8s/apps/minio-old/helm.yaml
@@ -1,14 +1,14 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: minio-old
+  name: minio
 spec:
   url: https://charts.min.io/
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: minio-old
+  name: minio
 spec:
   chart:
     spec:
