--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -38,7 +38,7 @@ spec:
       requests:
         memory: 500Mi
     oidc:
-      enabled: false
+      enabled: true
       configUrl: "https://auth.walnuts.dev/.well-known/openid-configuration"
       clientId: "241002618523026212@walnuts.dev"
       # Provide existing client secret from the Kubernetes Secret resource, existing secret will have priority over `clientSecret`
