--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -45,10 +45,9 @@ spec:
       # Provide existing client secret from the Kubernetes Secret resource, existing secret will have priority over `clientSecret`
       existingClientSecretName: "minio"
       existingClientSecretKey: "client-secret"
-      claimName: "minio-policy"
+      claimPrefix: "minio-"
+      claimName: "my:zitadel:grants"
       scopes: "openid,profile,email"
       redirectUri: "https://minio-console.walnuts.dev/oauth_callback"
-    environment:
-      MINIO_IDENTITY_OPENID_REDIRECT_URI: "https://minio-console.walnuts.dev/oauth_callback"
-      MINIO_SERVER_URL: "https://minio.walnuts.dev"
-      MINIO_BROWSER_REDIRECT_URL: "https://minio-console.walnuts.dev"
+      displayName: "walnuts.dev"
+
