--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -50,4 +50,7 @@ spec:
       scopes: "openid,profile,email"
       redirectUri: "https://minio-console.walnuts.dev/oauth_callback"
       displayName: "walnuts.dev"
-
+    environment:
+      MINIO_IDENTITY_OPENID_REDIRECT_URI: "https://minio-console.walnuts.dev/oauth_callback"
+      MINIO_SERVER_URL: "https://minio.walnuts.dev"
+      MINIO_BROWSER_REDIRECT_URL: "https://minio-console.walnuts.dev"
