add minio monitor

--- a/k8s/apps/minio/helm.yaml
+++ b/k8s/apps/minio/helm.yaml
@@ -53,3 +53,6 @@ spec:
       MINIO_IDENTITY_OPENID_REDIRECT_URI: "https://minio-console.walnuts.dev/oauth_callback"
       MINIO_SERVER_URL: "https://minio.walnuts.dev"
       MINIO_BROWSER_REDIRECT_URL: "https://minio-console.walnuts.dev"
+    metrics:
+      serviceMonitor:
+        enabled: true
