--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -49,7 +49,7 @@ spec:
         tls:
           insecure: true
       otlp/prometheus-exporter:
-        endpoint: prometheus-exporter-collector.monitoring.svc.cluster.local:4317
+        endpoint: prometheus-exporter-collector.opentelemetry-collector.svc.cluster.local:4317
         tls:
           insecure: true
     service:
