--- a/k8s/apps/opentelemetry-collectors/servicemonitor/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/servicemonitor/otel-collector.yaml
@@ -1,7 +1,7 @@
 apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
-  name: prometheus
+  name: servicemonitor
 spec:
   mode: statefulset
   serviceAccount: otel-collector
