--- a/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/default/otel-collector.yaml
@@ -20,25 +20,25 @@ spec:
       batch:
         send_batch_size: 10000
         timeout: 10s
-      k8sattributes:
-        auth_type: "serviceAccount"
-        extract:
-          metadata:
-          - k8s.namespace.name
-          - k8s.pod.name
-          - k8s.pod.start_time
-          - k8s.pod.uid
-          - k8s.deployment.name
-          - k8s.node.name
-        pod_association:
-        - sources: # First try to use the value of the resource attribute k8s.pod.ip
-          - from: resource_attribute
-            name: k8s.pod.ip
-        - sources: # Then try to use the value of the resource attribute k8s.pod.uid
-          - from: resource_attribute
-            name: k8s.pod.uid
-        - sources: # If neither of those work, use the request's connection to get the pod IP.
-          - from: connection
+      # k8sattributes:
+    #   auth_type: "serviceAccount"
+    #   extract:
+    #     metadata:
+    #     - k8s.namespace.name
+    #     - k8s.pod.name
+    #     - k8s.pod.start_time
+    #     - k8s.pod.uid
+    #     - k8s.deployment.name
+    #     - k8s.node.name
+    #   pod_association:
+    #   - sources: # First try to use the value of the resource attribute k8s.pod.ip
+    #     - from: resource_attribute
+    #       name: k8s.pod.ip
+    #   - sources: # Then try to use the value of the resource attribute k8s.pod.uid
+    #     - from: resource_attribute
+    #       name: k8s.pod.uid
+    #   - sources: # If neither of those work, use the request's connection to get the pod IP.
+    #     - from: connection
     exporters:
       otlp/tempo:
         endpoint: tempo.monitoring.svc.cluster.local:4317
