add log regex_parser

--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -15,7 +15,13 @@ spec:
         start_at: beginning
         include_file_path: true
         include_file_name: false
-        # operators:
+        operators:
+        - type: regex_parser
+          id: extract_metadata_from_filepath
+          regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
+          parse_from: attributes["log.file.path"]
+          cache:
+            size: 128
     # - type: router
     #   id: get-format
     #   routes:
@@ -49,12 +55,6 @@ spec:
     # - type: move
     #   from: attributes.log
     #   to: body
-    # - type: regex_parser
-    #   id: extract_metadata_from_filepath
-    #   regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
-    #   parse_from: attributes["log.file.path"]
-    #   cache:
-    #     size: 128
     # - type: move
     #   from: attributes.stream
     #   to: attributes["log.iostream"]
