--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -46,8 +46,8 @@ spec:
         #   timestamp:
         #     parse_from: attributes.time
         #     layout: '%Y-%m-%dT%H:%M:%S.%LZ'
-        - type: regex_parser
-          id: extract_metadata_from_filepath
+        - id: extract_metadata_from_filepath
+          type: regex_parser
           regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
           parse_from: attributes["log.file.path"]
           cache:
